--- a/calendar-double/package.json
+++ b/calendar-double/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "calendar-double",
-  "version": "0.0.1",
-  "description": "Stencil Component Starter",
+  "name": "dvn-calendar-double",
+  "version": "1.0.0",
+  "description": "Stencil Component Starter Double Calendar",
   "main": "dist/index.cjs.js",
   "module": "dist/index.js",
   "es2015": "dist/esm/index.js",
